fix lines overlapping in ios

--- a/_sass/01-base/base.scss
+++ b/_sass/01-base/base.scss
@@ -4,6 +4,7 @@
 
 body {
   font-family: gotham-book;
+  line-height: 1.2
 }
 .custom-container {
   margin: 0 auto;
