--- a/_sass/03-layouts/home.scss
+++ b/_sass/03-layouts/home.scss
@@ -163,7 +163,7 @@
     text-align: justify;
     background-repeat: no-repeat;
     padding-top: 10%;
-    padding-bottom: 13%;
+    padding-bottom: 15%;
 
     div {
       background-image: none;
@@ -202,6 +202,7 @@
   .introduction {
     div {
       max-width: 80%;
+      margin: auto;
     }
     padding-bottom: 5%;
   }
@@ -210,7 +211,8 @@
   }
   .problem-definition {
     div {
-      max-width: 1440px;
+      max-width: 80%;
+      margin: auto;
     }
   }
 }
